--- a/project-files/monica/monica.vcxproj.filters.template
+++ b/project-files/monica/monica.vcxproj.filters.template
@@ -13,280 +13,20 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Headerdateien\db">
-      <UniqueIdentifier>{7e5c53d4-912d-440f-86e8-7505a00f2f51}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\climate">
-      <UniqueIdentifier>{243cf0f5-c751-4787-ba36-9c12c941fd82}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\tools">
-      <UniqueIdentifier>{7ae366d5-d859-4190-bbc1-5c28e146016d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\db">
-      <UniqueIdentifier>{39146e89-98c9-4138-bafd-c378541aa1f8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\climate">
-      <UniqueIdentifier>{f1f3bd8e-725b-4e79-be3f-bfb89347e3fe}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\tools">
-      <UniqueIdentifier>{1d163105-0511-48c6-8ed6-9dbecd3fccd0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\soil">
-      <UniqueIdentifier>{f37ce209-c7b5-4253-9b44-d7c75986e521}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\soil">
-      <UniqueIdentifier>{e02a0226-8f19-437b-b6b2-d7a241762a88}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\json11">
-      <UniqueIdentifier>{c2967c48-54dd-4632-9a61-50c9320f3477}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\json11">
-      <UniqueIdentifier>{626abcf3-df0f-477a-a14e-495b8906c54b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\monica">
-      <UniqueIdentifier>{0d4d2dfa-41ee-4981-a0df-cc2a45330965}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\monica\core">
-      <UniqueIdentifier>{14093a09-018c-4d0e-9287-b15486b2726a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\monica\io">
-      <UniqueIdentifier>{468a5bdb-27e5-4867-9271-17f324241ed6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headerdateien\monica\run">
-      <UniqueIdentifier>{0389a3c5-dcb0-4f53-b0fb-4523761adb5c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Quelldateien\monica">
       <UniqueIdentifier>{d85df80c-435a-4c95-b13f-b6411b2bd006}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\monica\core">
-      <UniqueIdentifier>{be7f9266-f201-4e31-8f84-955cdc49fedd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\monica\io">
-      <UniqueIdentifier>{05439511-d991-429d-8a10-c4faea088929}</UniqueIdentifier>
     </Filter>
     <Filter Include="Quelldateien\monica\run">
       <UniqueIdentifier>{5a5e5c87-f3c9-4971-acab-1b6a33a96450}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\util\db\abstract-db-connections.h">
-      <Filter>Headerdateien\db</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\db\db.h">
-      <Filter>Headerdateien\db</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\db\sqlite3.h">
-      <Filter>Headerdateien\db</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\algorithms.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\datastructures.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\date.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\helper.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\read-ini.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\climate\climate-common.h">
-      <Filter>Headerdateien\climate</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\debug.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\soil\soil.h">
-      <Filter>Headerdateien\soil</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\soil\conversion.h">
-      <Filter>Headerdateien\soil</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\soil\constants.h">
-      <Filter>Headerdateien\soil</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\json11\json11.hpp">
-      <Filter>Headerdateien\json11</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\crop.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\monica.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\monica-parameters.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\monica-typedefs.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\simulation.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\soilcolumn.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\soilmoisture.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\soilorganic.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\soiltemperature.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\soiltransport.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\run\run-monica.h">
-      <Filter>Headerdateien\monica\run</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\run\run-monica-zmq.h">
-      <Filter>Headerdateien\monica\run</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\json11-helper.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\tools\zmq-helper.h">
-      <Filter>Headerdateien\tools</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\io\database-io.h">
-      <Filter>Headerdateien\monica\io</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\io\hermes-file-io.h">
-      <Filter>Headerdateien\monica\io</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\core\crop-growth.h">
-      <Filter>Headerdateien\monica\core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\io\file-io.h">
-      <Filter>Headerdateien\monica\io</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\run\cultivation-method.h">
-      <Filter>Headerdateien\monica\run</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\climate\climate-file-io.h">
-      <Filter>Headerdateien\climate</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\util\soil\soil-from-db.h">
-      <Filter>Headerdateien\soil</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\run\env-from-json.h">
-      <Filter>Headerdateien\monica\run</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\util\db\sqlite3.c">
-      <Filter>Quelldateien\db</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\db\abstract-db-connections.cpp">
-      <Filter>Quelldateien\db</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\db\db.cpp">
-      <Filter>Quelldateien\db</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\climate\climate-common.cpp">
-      <Filter>Quelldateien\climate</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\tools\algorithms.cpp">
-      <Filter>Quelldateien\tools</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\tools\date.cpp">
-      <Filter>Quelldateien\tools</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\tools\read-ini.cpp">
-      <Filter>Quelldateien\tools</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\tools\debug.cpp">
-      <Filter>Quelldateien\tools</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\soil\constants.cpp">
-      <Filter>Quelldateien\soil</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\soil\conversion.cpp">
-      <Filter>Quelldateien\soil</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\soil\soil.cpp">
-      <Filter>Quelldateien\soil</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\json11\json11.cpp">
-      <Filter>Quelldateien\json11</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\run\run-monica.cpp">
-      <Filter>Quelldateien\monica\run</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\crop.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\monica.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\monica-parameters.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\simulation.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\soilcolumn.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\soilmoisture.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\soilorganic.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\soiltemperature.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\soiltransport.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\run\run-monica-zmq.cpp">
-      <Filter>Quelldateien\monica\run</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\tools\helper.cpp">
-      <Filter>Quelldateien\tools</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\tools\zmq-helper.cpp">
-      <Filter>Quelldateien\tools</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\io\database-io.cpp">
-      <Filter>Quelldateien\monica\io</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\io\hermes-file-io.cpp">
-      <Filter>Quelldateien\monica\io</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\tools\json11-helper.cpp">
-      <Filter>Quelldateien\tools</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\crop-growth.cpp">
-      <Filter>Quelldateien\monica\core</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\io\file-io.cpp">
-      <Filter>Quelldateien\monica\io</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\run\cultivation-method.cpp">
-      <Filter>Quelldateien\monica\run</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\climate\climate-file-io.cpp">
-      <Filter>Quelldateien\climate</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\run\monica-main.cpp">
-      <Filter>Quelldateien\monica\run</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\util\soil\soil-from-db.cpp">
-      <Filter>Quelldateien\soil</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\run\env-from-json.cpp">
+    <ClCompile Include="..\..\src\run\monica-main.cpp">
       <Filter>Quelldateien\monica\run</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\monica.rc">
+    <ResourceCompile Include="..\..\monica.rc">
       <Filter>Ressourcendateien</Filter>
     </ResourceCompile>
   </ItemGroup>
