--- a/project-files/monica-full/monica.vcxproj.template
+++ b/project-files/monica-full/monica.vcxproj.template
@@ -9,14 +9,6 @@
       <Configuration>Debug</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
-    <ProjectConfiguration Include="monica dll|Win32">
-      <Configuration>monica dll</Configuration>
-      <Platform>Win32</Platform>
-    </ProjectConfiguration>
-    <ProjectConfiguration Include="monica dll|x64">
-      <Configuration>monica dll</Configuration>
-      <Platform>x64</Platform>
-    </ProjectConfiguration>
     <ProjectConfiguration Include="Release|Win32">
       <Configuration>Release</Configuration>
       <Platform>Win32</Platform>
@@ -29,7 +21,6 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A5570924-90D5-458B-B16B-08E03AC4C1CD}</ProjectGuid>
     <RootNamespace>monicahermes</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -38,22 +29,10 @@
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='monica dll|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='monica dll|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -76,13 +55,7 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
-  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='monica dll|Win32'" Label="PropertySheets">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
-  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='monica dll|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -92,16 +65,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(Platform)\$(Configuration)\</IntDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='monica dll|Win32'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(Platform)\$(Configuration)\</IntDir>
-  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -121,45 +87,7 @@
       <Command>$(SolutionDir)..\increase-build-number.bat $(SolutionDir)..</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='monica dll|Win32'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <MinimalRebuild>false</MinimalRebuild>
-      <PreprocessorDefinitions>WIN32;NO_MYSQL;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\..\util;..\..\..\sys-libs\includes\zeromq-dev-master</AdditionalIncludeDirectories>
-    </ClCompile>
-    <Link>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>libzmq.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\sys-libs\binaries\windows\vc14\x86\zeromq-dev-master</AdditionalLibraryDirectories>
-    </Link>
-    <PostBuildEvent>
-      <Command>$(SolutionDir)..\increase-build-number.bat $(SolutionDir)..</Command>
-    </PostBuildEvent>
-  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <MinimalRebuild>false</MinimalRebuild>
-      <PreprocessorDefinitions>RUN_HERMES;WIN32;NO_MYSQL;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\..\util;..\..\..\sys-libs\includes\zeromq-dev-master</AdditionalIncludeDirectories>
-    </ClCompile>
-    <Link>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>libzmq.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\sys-libs\binaries\windows\vc14\x64\zeromq-dev-master</AdditionalLibraryDirectories>
-    </Link>
-    <PostBuildEvent>
-      <Command>$(SolutionDir)..\increase-build-number.bat $(SolutionDir)..</Command>
-    </PostBuildEvent>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='monica dll|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
@@ -223,7 +151,82 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\util\climate\climate-common.h" />
+    <ClInclude Include="..\..\..\util\climate\climate-file-io.h" />
+    <ClInclude Include="..\..\..\util\db\abstract-db-connections.h" />
+    <ClInclude Include="..\..\..\util\db\db.h" />
+    <ClInclude Include="..\..\..\util\db\sqlite3.h" />
+    <ClInclude Include="..\..\..\util\json11\json11.hpp" />
+    <ClInclude Include="..\..\..\util\soil\constants.h" />
+    <ClInclude Include="..\..\..\util\soil\conversion.h" />
+    <ClInclude Include="..\..\..\util\soil\soil-from-db.h" />
+    <ClInclude Include="..\..\..\util\soil\soil.h" />
+    <ClInclude Include="..\..\..\util\tools\algorithms.h" />
+    <ClInclude Include="..\..\..\util\tools\datastructures.h" />
+    <ClInclude Include="..\..\..\util\tools\date.h" />
+    <ClInclude Include="..\..\..\util\tools\debug.h" />
+    <ClInclude Include="..\..\..\util\tools\helper.h" />
+    <ClInclude Include="..\..\..\util\tools\json11-helper.h" />
+    <ClInclude Include="..\..\..\util\tools\read-ini.h" />
+    <ClInclude Include="..\..\..\util\tools\zmq-helper.h" />
+    <ClInclude Include="..\..\src\core\crop-growth.h" />
+    <ClInclude Include="..\..\src\core\crop.h" />
+    <ClInclude Include="..\..\src\core\monica-parameters.h" />
+    <ClInclude Include="..\..\src\core\monica.h" />
+    <ClInclude Include="..\..\src\core\soilcolumn.h" />
+    <ClInclude Include="..\..\src\core\soilmoisture.h" />
+    <ClInclude Include="..\..\src\core\soilorganic.h" />
+    <ClInclude Include="..\..\src\core\soiltemperature.h" />
+    <ClInclude Include="..\..\src\core\soiltransport.h" />
+    <ClInclude Include="..\..\src\core\monica-typedefs.h" />
+    <ClInclude Include="..\..\src\core\voc-common.h" />
+    <ClInclude Include="..\..\src\core\voc-guenther.h" />
+    <ClInclude Include="..\..\src\core\voc-jjv.h" />
+    <ClInclude Include="..\..\src\io\database-io.h" />
+    <ClInclude Include="..\..\src\io\file-io.h" />
+    <ClInclude Include="..\..\src\io\hermes-file-io.h" />
+    <ClInclude Include="..\..\src\run\cultivation-method.h" />
+    <ClInclude Include="..\..\src\run\env-from-json.h" />
+    <ClInclude Include="..\..\src\run\run-monica-zmq.h" />
+    <ClInclude Include="..\..\src\run\run-monica.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\util\climate\climate-common.cpp" />
+    <ClCompile Include="..\..\..\util\climate\climate-file-io.cpp" />
+    <ClCompile Include="..\..\..\util\db\abstract-db-connections.cpp" />
+    <ClCompile Include="..\..\..\util\db\db.cpp" />
+    <ClCompile Include="..\..\..\util\db\sqlite3.c" />
+    <ClCompile Include="..\..\..\util\json11\json11.cpp" />
+    <ClCompile Include="..\..\..\util\soil\constants.cpp" />
+    <ClCompile Include="..\..\..\util\soil\conversion.cpp" />
+    <ClCompile Include="..\..\..\util\soil\soil-from-db.cpp" />
+    <ClCompile Include="..\..\..\util\soil\soil.cpp" />
+    <ClCompile Include="..\..\..\util\tools\algorithms.cpp" />
+    <ClCompile Include="..\..\..\util\tools\date.cpp" />
+    <ClCompile Include="..\..\..\util\tools\debug.cpp" />
+    <ClCompile Include="..\..\..\util\tools\helper.cpp" />
+    <ClCompile Include="..\..\..\util\tools\json11-helper.cpp" />
+    <ClCompile Include="..\..\..\util\tools\read-ini.cpp" />
+    <ClCompile Include="..\..\..\util\tools\zmq-helper.cpp" />
+    <ClCompile Include="..\..\src\core\crop-growth.cpp" />
+    <ClCompile Include="..\..\src\core\crop.cpp" />
+    <ClCompile Include="..\..\src\core\voc-guenther.cpp" />
+    <ClCompile Include="..\..\src\core\voc-jjv.cpp" />
+    <ClCompile Include="..\..\src\io\database-io.cpp" />
+    <ClCompile Include="..\..\src\io\file-io.cpp" />
+    <ClCompile Include="..\..\src\io\hermes-file-io.cpp" />
+    <ClCompile Include="..\..\src\run\env-from-json.cpp" />
     <ClCompile Include="..\..\src\run\monica-main.cpp" />
+    <ClCompile Include="..\..\src\core\monica-parameters.cpp" />
+    <ClCompile Include="..\..\src\core\monica.cpp" />
+    <ClCompile Include="..\..\src\run\cultivation-method.cpp" />
+    <ClCompile Include="..\..\src\run\run-monica-zmq.cpp" />
+    <ClCompile Include="..\..\src\run\run-monica.cpp" />
+    <ClCompile Include="..\..\src\core\soilcolumn.cpp" />
+    <ClCompile Include="..\..\src\core\soilmoisture.cpp" />
+    <ClCompile Include="..\..\src\core\soilorganic.cpp" />
+    <ClCompile Include="..\..\src\core\soiltemperature.cpp" />
+    <ClCompile Include="..\..\src\core\soiltransport.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\monica.rc" />
